--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h2 {
   border-radius: 0.313rem;
   margin-top: 1.56rem;
   box-shadow: 0 0.25rem 0.625rem 0.063rem rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 span {
   font-size: 1.875rem;
