--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   font-size: 1rem;
 }
 main {
-  width: 39.7rem;
+  max-width: 39.7rem;
   margin: 3.5rem auto;
   border-radius: 0.5rem;
   overflow: hidden;
